--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: XXX
-description: YYY
+title: Games
+description: Game or no game?
 logo: https://media.giphy.com/media/26ybwyb5dKBiKsZJC/giphy.gif
